--- a/SAS/description
+++ b/SAS/description
@@ -1,1 +1,1 @@
-The SAS file provided here has been kindly developed by Dr Andrew Kramer who has provided permission to share this more widely.
+The SAS file provided here has been kindly developed by Dr Andrew Kramer who has provided permission to share this publicly.
